# cmakeDemo

./: README.md
demo/: CMakeLists.txt
demo/include/: sort.h
demo/sort/: CMakeLists.txt
demo/test1/: CMakeLists.txt  main.cpp
demo/test2/: CMakeLists.txt  main.cpp
demo1/: CMakeLists.txt
demo1/calc/: CMakeLists.txt  add.cpp  mult.cpp  sub.cpp
demo1/sort/: CMakeLists.txt  sort.cpp
demo1/test/: CMakeLists.txt  main.cpp
v1/: CMakeLists.txt
v2/: CMakeLists.txt
v3/: CMakeLists.txt
v4/: CMakeLists.txt
v5/: CMakeLists.txt
v6/: CMakeLists.txt  test.cpp
